subo esto por si llega a ser de utilidad

--- a/server/etherpad-lite/src/templates/pad.html
+++ b/server/etherpad-lite/src/templates/pad.html
@@ -84,13 +84,13 @@
       <!----------------------------->
       <!--- PAD EDITOR (in iframe) -->
       <!----------------------------->
-      <div id="compoFirmar"></div>
-      <script type="module" src="../../admin/src/pages/Firmar.tsx"></script>
+      <!--<div id="compoFirmar"></div> -->
+      <!--<script type="module" src="../templates/padEditor/assets/Firmar-Dty-t_96.js"></script> -->
 
      <!-- <script type="module" src="../../admin/src/pages/Firmar.tsx"></script> -->
       
       <!--Código de prueba-->
-      <!--
+      
         <div className="modal-dialog">
           <div className="modal-content">
               <div className="modal-header">
@@ -126,7 +126,7 @@
               </div>
           </div>
       </div>
-      -->
+      
 
       <div id="editorcontainer" class="editorcontainer"></div>
 
