avance del modal de la firma

--- a/server/etherpad-lite/src/static/skins/colibris/pad.css
+++ b/server/etherpad-lite/src/static/skins/colibris/pad.css
@@ -3,7 +3,7 @@
 @import url("src/pad-editor.css");
 
 @import url("src/components/scrollbars.css");
-@import url("src/components/buttons.css");
+/*@import url("src/components/buttons.css");*/
 @import url("src/components/popup.css");
 
 @import url("src/components/chat.css");
